--- a/public/the_bridge_templates/static/pricing.html
+++ b/public/the_bridge_templates/static/pricing.html
@@ -12,149 +12,87 @@
 </header>
 
 <div class="featurette">
-
-    <div class="container">
-
-        <br>
-
-        <div class="row flat">
-          <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
-            <ul class="plan plan1">
-              <li class="plan-name">
-                  Free
-              </li>
-              <li class="plan-price">
-                  <strong>$0</strong> / mo.
-              </li>
-              <li>
-                  <strong>1</strong> job
-              </li>
-              <li>
-                  <strong>limited</strong> support
-              </li>
-              <li>
-                  <strong>100</strong> transactions/mo.
-              </li>
-              <li>
-                <strong>auto</strong> sync
-              </li>
-              <li class="plan-action">
-                  <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 col-xs-6">
-            <ul class="plan plan2">
-              <li class="plan-name">
-                  Entry
-              </li>
-              <li class="plan-price">
-                  <strong>$39</strong> / mo.
-              </li>
-              <li>
-                  <strong>3</strong> jobs
-              </li>
-              <li>
-                  <strong>limited</strong> support
-              </li>
-              <li>
-                  <strong>1,000</strong> transactions/mo.
-              </li>
-              <li>
-                <strong>auto</strong> sync
-              </li>
-              <li class="plan-action">
-               <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-lg-2 col-md-3 col-xs-6">
-            <ul class="plan plan3 featured">
-              <li class="plan-name">
-                  Startup
-              </li>
-              <li class="plan-price">
-                  <strong>$79</strong> / mo.
-              </li>
-              <li>
-                  <strong>10</strong> jobs
-              </li>
-              <li>
-                  <strong>limited</strong> support
-              </li>
-              <li>
-                  <strong>2,000</strong> transactions/mo.
-              </li>
-              <li>
-                <strong>auto</strong> sync
-              </li>
-              <li class="plan-action">
-               <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
-             </li>
-         </ul>
-     </div>
-
-     <div class="col-lg-2 col-md-3 col-xs-6">
-        <ul class="plan plan4">
-            <li class="plan-name">
-                Growth
-            </li>
-            <li class="plan-price">
-                <strong>$299</strong> / mo.
-            </li>
-            <li>
-                <strong>20</strong> jobs
-            </li>
-            <li>
-                <strong>email</strong> support
-            </li>
-            <li>
-                <strong>10,000</strong> transactions/mo.
-            </li>
-            <li>
-                <strong><i class="fa fa-bolt"></i> rapid</strong> sync
-            </li>
-            <li class="plan-action">
-             <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
-         </li>
-     </ul>
-    </div>
-
-      <div class="col-lg-2 col-md-3 col-xs-6">
-        <ul class="plan plan4">
-          <li class="plan-name">
-              Enterprise
-          </li>
-          <li class="plan-name2">
-              <strong>project</strong> management
-          </li>
-          <li>
-              <strong>users</strong> &amp; roles
-          </li>
-          <li>
-              <strong>unlimited</strong> jobs
-          </li>
-          <li>
-              <strong>priority</strong> support
-          </li>
-          <li>
-              <strong>unlimited</strong> transactions/mo.
-          </li>
-          <li>
-              <strong><i class="fa fa-bolt"></i> rapid</strong> sync
-          </li>
+  <div class="container">
+    <br>
+    <div class="row flat">
+      <div class="col-lg-2 col-md-3 col-xs-6 col-lg-offset-1">
+        <ul class="plan plan1">
+          <li class="plan-name">Free</li>
+          <li class="plan-price"><strong>$0</strong> / mo.</li>
+          <li><strong>1</strong> job</li>
+          <li><strong>limited</strong> support</li>
+          <li><strong>100</strong> transactions/mo.</li>
+          <li><strong>auto</strong> sync</li>
           <li class="plan-action">
-           <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">Contact</a>
+              <a href="/signup?plan=Free" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
           </li>
         </ul>
       </div>
 
+      <div class="col-lg-2 col-md-3 col-xs-6">
+        <ul class="plan plan2">
+          <li class="plan-name">Entry</li>
+          <li class="plan-price"><strong>$39</strong> / mo.</li>
+          <li><strong>3</strong> jobs</li>
+          <li><strong>limited</strong> support</li>
+          <li><strong>1,000</strong> transactions/mo.</li>
+          <li><strong>auto</strong> sync</li>
+          <li class="plan-action">
+           <a href="/signup?plan=Entry" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
+          </li>
+        </ul>
       </div>
-      <div class="featurette">
-        <p class="lead">Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</p>
-        <p class="lead">Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</p>
-        <p class="lead">By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</p>
-      </div>
+
+      <div class="col-lg-2 col-md-3 col-xs-6">
+        <ul class="plan plan3 featured">
+          <li class="plan-name">Startup</li>
+          <li class="plan-price"><strong>$79</strong> / mo.</li>
+          <li><strong>10</strong> jobs</li>
+          <li><strong>limited</strong> support</li>
+          <li><strong>2,000</strong> transactions/mo.</li>
+          <li><strong>auto</strong> sync</li>
+          <li class="plan-action">
+           <a href="/signup?plan=Startup" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
+         </li>
+       </ul>
+     </div>
+
+     <div class="col-lg-2 col-md-3 col-xs-6">
+      <ul class="plan plan4">
+        <li class="plan-name">Growth</li>
+        <li class="plan-price"><strong>$299</strong> / mo.</li>
+        <li><strong>20</strong> jobs</li>
+        <li><strong>email</strong> support</li>
+        <li><strong>10,000</strong> transactions/mo.</li>
+        <li><strong><i class="fa fa-bolt"></i> rapid</strong> sync</li>
+        <li class="plan-action">
+          <a href="/signup?plan=Growth" ng-click="$event.stopPropagation()" class="btn btn-primary btn-lg">Sign up</a>
+       </li>
+     </ul>
+    </div>
+
+    <div class="col-lg-2 col-md-3 col-xs-6">
+      <ul class="plan plan4">
+        <li class="plan-name">Enterprise</li>
+        <li class="plan-name2"><strong>project</strong> management</li>
+        <li><strong>users</strong> &amp; roles</li>
+        <li><strong>unlimited</strong> jobs</li>
+        <li><strong>priority</strong> support</li>
+        <li><strong>unlimited</strong> transactions/mo.</li>
+        <li><strong><i class="fa fa-bolt"></i> rapid</strong> sync</li>
+        <li class="plan-action">
+         <a href="mailto:admin@openfn.org" class="btn btn-primary btn-lg">Contact</a>
+        </li>
+      </ul>
+    </div>
+
+  </div>
+
+  <div class="featurette">
+    <p class="lead">Please <u><a href="mailto:admin@openfn.org">contact</a></u> us if none of the above plans fit your needs.</p>
+    <p class="lead">Grants and donations subsidize the costs of the platform heavily, but those costs are significant and the time and money saved by organizations using the platform is great.</p>
+    <p class="lead">By open-sourcing our code, we're ensuring that everything remains priced at or below the 'do-it-yourself' cost. If you can host the application less expensively with your own servers and staff, you're free to use everything we've built. The code is <u><a href="https://www.gnu.org/licenses/quick-guide-gplv3.html" target="_blank">GPLv3</a></u> licensed, which stipulates that any such derivatives or improvements to the platform <em>must</em> remain open-source. We will periodically roll-those enhancements back into openfn.org so that the whole community can benefit from innovations made by any of our individual members.</p>
+  </div>
+  
+</div>
 
