--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -1,145 +1,133 @@
 <div ng-controller="MarketplaceController as marketplace">
-<div class="header-image">
-  <div class="headline container-fluid">
-
-    <h2 class="margin-small-bottom">open<strong>Marketplace</strong></h2>
-    <h4 class="headline-text margin-top-remove margin-large-bottom">Find the technology you need to grow your impact.</h4>
-
-    <div class="col-md-10 col-md-offset-1">
-      <div class="search-field">
-        <input
-          type="text"
-          class="form-control"
-          ng-class="alex"
-          placeholder="Start typing to search..."
-          ng-model="searchText"
-          tooltip-trigger="mouseenter"
-          tooltip="Search for product names, descriptions, tags, or websites."
-          typeahead="keyword for keyword in keywords | filter:$viewValue | limitTo:8">
-      </div>
-    </div>
-
-    <div class="col-md-10 col-md-offset-1">
-      <div class="new-product-link margin-small-top">
-        <label
-          style="float: left;"
-          class="btn integrated-btn"
-          ng-click="go('/product/new')">
-          <i class="fa fa-plus"></i>Add your product
-        </label>
-
-        <label
-          style="float: right;"
-          class="btn integrated-btn"
-          tooltip-trigger="mouseenter"
-          tooltip-placement="bottom"
-          tooltip="Click here to show only connected apps."
-          ng-model="searchFilters.integrated"
-          btn-checkbox>
-          Integrated
-        </label>
-      </div>
-    </div>
-
-    <div data-accordions-toggle class='accordion-panel-toggle'>
-      <svg version="1.1" id="sliders" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-         viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
-        <style type="text/css">
-          .st0{fill:#374A50;}
-        </style>
-        <path id="sliders-bars" class="st0" d="M18,7.5H0v-1h18V7.5z M18,11.5H0v1h18V11.5z M18,1.5H0v1h18V1.5z"/>
-        <rect id="slider-bottom" x="3" y="10" class="st0" width="4" height="4"/>
-        <rect id="slider-middle" x="11" y="5" class="st0" width="4" height="4"/>
-        <rect id="slider-top" x="3" class="st0" width="4" height="4"/>
-      </svg>
-    </div>
-  </div>
-
-  <div id="sticky-anchor"></div>
-  <div id="sticky" class="container-fluid accordion-container" style="display: block">
-    <div class="col-xs-12 margin-large-top margin-bottom">
-      <div class="col-lg-2 col-sm-6 custom-accord" ng-repeat="category in categories">
-        <accordion>
-          <accordion-group>
-            <accordion-heading>
-              <div data-accordion-highlight class="ng-panel-title" ng-class="categoryTags(category).length > 0 ? 'active' : ''">
-                {{category.name}} <i class="pull-right fa fa-caret-down"></i>
-              </div>
-            </accordion-heading>
-            <li class="list-group-item"
-              ng-repeat="tag in tags | filter:{tag_category_id: category.id } | orderBy: '-taggings_count'"
-              ng-click="tagFilter(tag)"
-              ng-model="tag.active"
-              btn-checkbox
-              ng-class="(((tag.taggings_count == 0)&&(!tag.active))||(isLoading)) ? 'better-button-disabled' : 'better-button-able'">{{tag.name}}
-              <span class="badge" ng-class="tag.active ? 'active' : ''">
-                ({{tag.taggings_count}})
-              </span>
-            </li>
-          </accordion-group>
-        </accordion>
-      </div>
-      <div class="col-lg-2 col-sm-6">
-        <div class="reset-accordions" ng-click="removeTagFilters()">
-          <a>Reset<i class="pull-right fa fa-times-circle-o"></i></a>
+    <div class="header-image">
+        <div class="headline container-fluid">
+            <h2 class="margin-small-bottom">open<strong>Marketplace</strong></h2>
+            <h4 class="headline-text margin-top-remove margin-large-bottom">Find the technology you need to grow your impact.</h4>
+            <div class="col-md-10 col-md-offset-1">
+                <div class="search-field">
+                    <input
+                    type="text"
+                    class="form-control"
+                    ng-class="alex"
+                    placeholder="Start typing to search..."
+                    ng-model="searchText"
+                    tooltip-trigger="mouseenter"
+                    tooltip="Search for product names, descriptions, tags, or websites."
+                    typeahead="keyword for keyword in keywords | filter:$viewValue | limitTo:8">
+                </div>
+            </div>
+            <div class="col-md-10 col-md-offset-1">
+                <div class="new-product-link margin-small-top">
+                    <label
+                        style="float: left;"
+                        class="btn integrated-btn"
+                        ng-click="go('/product/new')">
+                        <i class="fa fa-plus"></i>Add your product
+                    </label>
+                    <label
+                        style="float: right;"
+                        class="btn integrated-btn"
+                        tooltip-trigger="mouseenter"
+                        tooltip-placement="bottom"
+                        tooltip="Click here to show only connected apps."
+                        ng-model="searchFilters.integrated"
+                        btn-checkbox>
+                        Integrated
+                    </label>
+                </div>
+            </div>
+            <div data-accordions-toggle class='accordion-panel-toggle'>
+                <svg version="1.1" id="sliders" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 18 14" style="enable-background:new 0 0 18 14;" xml:space="preserve">
+                <style type="text/css">
+                                                                                                                                                                                                    .st0{fill:#374A50;}
+                </style>
+                <path id="sliders-bars" class="st0" d="M18,7.5H0v-1h18V7.5z M18,11.5H0v1h18V11.5z M18,1.5H0v1h18V1.5z"/>
+                <rect id="slider-bottom" x="3" y="10" class="st0" width="4" height="4"/>
+                <rect id="slider-middle" x="11" y="5" class="st0" width="4" height="4"/>
+                <rect id="slider-top" x="3" class="st0" width="4" height="4"/>
+                </svg>
+            </div>
         </div>
-      </div>
+        <div id="sticky-anchor"></div>
+        <div id="sticky" class="container-fluid accordion-container" style="display: block">
+            <div class="col-xs-12 margin-large-top margin-bottom">
+                <div class="col-lg-2 col-sm-6 custom-accord" ng-repeat="category in categories">
+                    <accordion>
+                    <accordion-group>
+                    <accordion-heading>
+                    <div data-accordion-highlight class="ng-panel-title" ng-class="categoryTags(category).length > 0 ? 'active' : ''">
+                        {{category.name}} <i class="pull-right fa fa-caret-down"></i>
+                    </div>
+                    </accordion-heading>
+                    <li class="list-group-item"
+                        ng-repeat="tag in tags | filter:{tag_category_id: category.id } | orderBy: '-taggings_count'"
+                        ng-click="tagFilter(tag)"
+                        ng-model="tag.active"
+                        btn-checkbox
+                        ng-class="(((tag.taggings_count == 0)&&(!tag.active))||(isLoading)) ? 'better-button-disabled' : 'better-button-able'">{{tag.name}}
+                        <span class="badge" ng-class="tag.active ? 'active' : ''">
+                        ({{tag.taggings_count}})
+                        </span>
+                    </li>
+                    </accordion-group>
+                    </accordion>
+                </div>
+                <div class="col-lg-2 col-sm-6">
+                    <div class="reset-accordions" ng-click="removeTagFilters()">
+                        <a>Reset<i class="pull-right fa fa-times-circle-o"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-
-  </div>
-
-        <div class="col-xs-12 center" ng-if="isLoading">
-          <br><br><br>
-          <i class="fa fa-refresh fa-2x fa-spin"></i>
-          <h4>
-            <br>
-            Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
-          </h4>
-        </div>
-<div packery id="container" class="product">
-
-<div class="packery-brick" ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']">
-  <div ng-class="product.integrated ? 'product integrated' : 'product'">
-    <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12 item">
-      <div class="card">
-        <div class="card-block">
-          <img class="card-img-top app-logo" src="{{product.logo_url}}" alt="" style="cursor: pointer;" ng-click="go('/product/' + product.id)"><span tooltip-trigger="mouseenter" tooltip="Rating, out of 5." class="pull-right live"><b>{{product.rating | number: 1 }}</b></span>
-          <br><br>
-          <div class="card-block">
-            <h4 class="card-title" ng-click="go('/product/' + product.id)" style="cursor: pointer;">{{product.name}}</h4>
-            <p class="card-text"> {{product.description}}</p>
-          </div>
-        </div>
-        <div class="card-footer text-muted small">
-          <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
-              <a class="card-link pull-right" ng-show="product.integrated && !(product.name=='Telerivet')" style="cursor: pointer;" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Automate <i class="fa fa-flash"></i></a>
-              <a class="card-link pull-right" ng-show="product.name=='Telerivet'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Automate <i class="fa fa-flash"></i></a>
-              <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Upvote for {{product.name}} to support a new adapter."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
-              <a class="card-link" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
-              <span class="pull-right"><small><ng-pluralize count="product.reviews_count" when="{'0': '','one': '1 review','other': '{} reviews'}"></ng-pluralize></small></span>
-        </div>
-      </div>
+    <div class="col-xs-12 center" ng-if="isLoading">
+        <br><br><br>
+        <i class="fa fa-refresh fa-2x fa-spin"></i>
+        <h4>
+        <br>
+        Hang tight while we gather data on hundreds of technologies, reviews, tags, and votes.
+        </h4>
     </div>
-  </div>
-
+    <!-- <packery draggable="false" class="product">
+    <packery-object ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']" class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12"> -->
+    <div class="product">
+        <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']" class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12">
+            <div class="card">
+                <div class="card-block">
+                    <img class="card-img-top app-logo" src="{{product.logo_url}}" alt="" style="cursor: pointer;" ng-click="go('/product/' + product.id)"><span tooltip-trigger="mouseenter" tooltip="Rating, out of 5." class="pull-right live"><b>{{product.rating | number: 1 }}</b></span>
+                    <br><br>
+                    <div class="card-block">
+                        <h4 class="card-title" ng-click="go('/product/' + product.id)" style="cursor: pointer;">{{product.name}}</h4>
+                        <p class="card-text"> {{product.description | limitTo: 117 }}</p>
+                    </div>
+                </div>
+                <div class="card-footer text-muted small">
+                    <a class="card-link" ng-href="{{product.website}}" ng-click="$event.stopPropagation()" target="_blank">Link</a>
+                    <a class="card-link pull-right" ng-show="product.integrated && !(product.name=='Telerivet')" style="cursor: pointer;" ng-click="integratedProduct('/mappings'); $event.stopPropagation()">Automate <i class="fa fa-flash"></i></a>
+                    <a class="card-link pull-right" ng-show="product.name=='Telerivet'" ng-href="https://github.com/OpenFn/fn-telerivet-salesforce" target="_blank">Automate <i class="fa fa-flash"></i></a>
+                    <a class="card-link" ng-show="!product.integrated" ng-click="changeVoteFor(product); $event.stopPropagation()" tooltip-trigger="mouseenter" tooltip="Upvote for {{product.name}} to support a new adapter."><i ng-class="{'fa ' : true, 'fa-thumbs-down' : product.hasVoteForUser, 'fa-thumbs-up' : !product.hasVoteForUser}"></i></a>
+                    <a class="card-link" ng-hide="product.integrated"><i class="fa fa-heart"></i> + <span class="live">{{product.votes_count}}</span></a>
+                    <span class="pull-right"><small><ng-pluralize count="product.reviews_count" when="{'0': '','one': '1 review','other': '{} reviews'}"></ng-pluralize></small></span>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- </packery-object>
+    </packery> -->
 </div>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/packery/1.4.3/packery.pkgd.js"></script>
-
 <script>
-function sticky_relocate() {
-    var window_top = $(window).scrollTop();
-    var div_top = $('#sticky-anchor').offset().top;
-    if (window_top + 78 > div_top) {
-        $('#sticky').addClass('stick');
-    } else {
-        $('#sticky').removeClass('stick');
-    }
-}
-
-$(function () {
-    $(window).scroll(sticky_relocate);
-    sticky_relocate();
-});
+  function sticky_relocate() {
+          var window_top = $(window).scrollTop();
+          var div_top = $('#sticky-anchor').offset().top;
+          if (window_top + 78 > div_top) {
+          $('#sticky').addClass('stick');
+      } else {
+          $('#sticky').removeClass('stick');
+      }
+  }
+  $(function () {
+      $(window).scroll(sticky_relocate);
+      sticky_relocate();
+  });
 </script>
