--- a/public/the_bridge_templates/cases/index.html
+++ b/public/the_bridge_templates/cases/index.html
@@ -37,9 +37,10 @@
         </div>
         <div class="col-md-12">
           <h2><b>{{case.title}}</b><small>&nbsp&nbsp{{case.org_name}}</small></h2>
-          <h3>
+          <div class="featurette">
+            <br>
             <p class="lead" ng-bind-html="case.body"></p><br>
-          </h3>
+          </div>
         </div>
       </div>
     </div>
