--- a/public/the_bridge_templates/footer.html
+++ b/public/the_bridge_templates/footer.html
@@ -1,6 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
+    <small>
       <p class="text-center">
         OpenFn is connecting technologies for a more efficient development sector. All of our code is open source.
         <br><br>
@@ -20,6 +21,7 @@
           medium <i class="fa fa-medium fa-lg"></i>
         </a>.
       </p>
+    </small>
     </div>
   </div>
 </div>
