--- a/public/the_bridge_templates/marketplace/index.html
+++ b/public/the_bridge_templates/marketplace/index.html
@@ -93,7 +93,7 @@
     <packery-object ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']" class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12"> -->
     <div class="product">
         <div ng-repeat="product in (filteredProducts =( products | filter:filterProducts)) | orderBy:['-integrated','-votes_count','name']" class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-12">
-            <div class="card">
+            <div class="card tile">
                 <div class="card-block">
                     <img class="card-img-top app-logo" src="{{product.logo_url}}" alt="" style="cursor: pointer;" ng-click="go('/product/' + product.id)"><span tooltip-trigger="mouseenter" tooltip="Rating, out of 5." class="pull-right live"><b>{{product.rating | number: 1 }}</b></span>
                     <br><br>
