--- a/public/the_bridge_templates/product/new.html
+++ b/public/the_bridge_templates/product/new.html
@@ -54,7 +54,7 @@
           <button ng-click="newProduct()" id="submit" class="btn btn-success" type="submit">Submit New Product</button>
         </div>
       </div>
-      <div class="card-footer text-muted small">
+      <div class="card-footer noisy text-muted small">
         <p>The following information will help social impact organizations find the right technology to fit their needs. The “tile summary” is the main listing on openMarketplace. The filter tags help organizations sort through numerous technologies based on their needs, location, field users, and other factors.</p>
         <p>We encourage suggestions from all members of the community whether they be product developers, consultants, or end-user organizations. There are a few required fields that cover basic and summary information. Beyond that, we ask that listings focus on the functionality of each technology and what it enables users to do and avoid statements that place more value on one technology over another. Your submission must be reviewed and accepted by one of the core contributors at openfn before it is updated. Again, please refrain from using value words to ensure the listing is accepted promptly.</p>
         <p>Terms and Conditions: OpenFn reserves editorial decision-making power over listings that are published. We reserve the right to edit posts or request revisions. In the spirit of openness, we also maintain the right to indicate the author of listings on the openMarketplace.</p>
