inline block for reviews

--- a/public/the_bridge_templates/product/show.html
+++ b/public/the_bridge_templates/product/show.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="card">
+        <div class="card pcard">
             <div class="card-block">
                 <h4 class="card-title">Reviews</h4>
                 <div ng-show="product.reviews_count == 0">Nobody has review this product yet. Be the first! <a ng-click="checkLogin()" data-toggle="modal" data-target="#review_modal" target="_blank" class="review-link"><strong>Click to rate & review {{product.name}}.</strong></a></div>
