add logo to new product

--- a/public/the_bridge_templates/product/new.html
+++ b/public/the_bridge_templates/product/new.html
@@ -16,6 +16,8 @@
         <div class="form-group col-md-12">
           <label for="InputTechName">Name</label>
           <input type="text" class="form-control" id="InputTechName" ng-model="product.name"><br>
+          <label for="InputLogo">Logo</label>
+          <input type="text" class="form-control" id="InputLogo" ng-model="product.logo_url"><br>
           <label for="InputTechName">Website</label>
           <input type="text" class="form-control" id="InputTechWebsite" ng-model="product.website"><br>
           <label for="InputTechName">Twitter handle</label>
